# cds-mapproj-rust

./: CHANGELOG.md  Cargo.toml  README.md
doc/src/: Makefile  biblio.bib  proj.sty  proj.tex  trigo.tex
doc/src/cylindrical/: car.tex  cea.tex  cyp.tex
doc/src/pseudocylindrical/: mol.tex
doc/src/zenithal/: air.tex  arc.tex  azp.tex  ncp.tex  sin.tex  stg.tex  szp.tex  tan.tex  zea.tex  zpn.tex
src/: img2celestial.rs  img2lonlat.rs  img2proj.rs  lib.rs  math.rs  sip.rs
src/conic/: cod.rs  coe.rs  coo.rs  cop.rs  mod.rs
src/cylindrical/: car.rs  cea.rs  cyp.rs  mer.rs  mod.rs
src/hybrid/: hpx.rs  mod.rs
src/pseudocyl/: ait.rs  mod.rs  mol.rs  par.rs  sfl.rs
src/zenithal/: air.rs  arc.rs  azp.rs  feye.rs  mod.rs  ncp.rs  sin.rs  stg.rs  szp.rs  tan.rs  zea.rs  zpn.rs
tests/: proj.rs  sin.rs
